packages/idris_db/test/errors/class/constructor_unknown_parameter.dart
// constructor parameter does not match a property

import 'package:idris_db/idris_db.dart';

@collection
class Model {
  // Test case: testing constructor parameter that doesn't match any property
  // ignore: avoid_unused_constructor_parameters
  Model(this.prop1, String somethingElse);

  late int id;

  final String prop1;
}
